# qaguru_lelsson_19

./: pyproject.toml
schemas/: list_users.json
tests/: test_api.py
utils/: util.py
