[tool.poetry]
name = "lesson-19"
version = "0.1.0"
description = ""
authors = ["ils-808 <iliastetsun@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "2.31.0"
jsonschema = "4.20.0"
pytest = "7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
